- Image markers can be draggable or not, settable by a View menu item
- Keep GPX files in lxml.etree Elements, don't parse to lists/dicts
- GPX files are validated against GPX 1.1 schema, refuse to import invalid GPX
- Fix crash with non-existent cached image directory
- Better error handling in several places
- Add a 'Distance' column to the Tracks tab, shows track distance in meters

v1.2 - 05 Nov 2012
-----------------

- Make application appear more responsive during time-consuming operations
- Track line width on the map is now configurable
- Add image markers on the map for tagged images and add an option to hide them
- Color and size of image markers are configurable
- Use GObject property bind functionality to automatically save settings
- Add inline documentation to the code
- Move general purpose functions outside the main app module
- Make image markers 50% opaque
- Many general code improvements and optimizations
- Let Exiv2 decide on the supported file formats, instead of just reading JPG
- Implement "select all from this camera" for images
- Add camera ID column to images list, hidden by default
- Show the current image directory in the statusbar

v1.1 - 24 Oct 2012
------------------

- Restructure directory layout and add Python distutils and Debian packaging
- Add an icon and a .desktop file
- Disable Google map sources by default
- Feature: copy/paste coordinates with CTRL-C/CTRL-V
- Add two mapsources: Mapbox Streets and (just for fun) Stamen Watercolor
- Handle elevation/altitude in geo-tags
- Screen redrawing during time-consuming operations, to make it look snappier
- Marker size is now configurable
- Bookmarks are now properly sorted by name
- Add many menu-accelerators (keyboard shortcuts)
- Make functions from some action buttons available under view menu too

v1.0 - 15 Oct 2012
------------------

First public release with basic functionality:
- Show map, choose from different map providers
- Map functions: zoom in/out, coordinate overlay